[package]
name = "helloplus"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "api"
]

[dependencies]
conrod = { version = "0.55.0", features = ["glium", "winit"] }
find_folder="0.3.0"
image = "0.23.14"
api={path="./api"}
env_logger = "0.9.0"
log="0.4"
